--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -1567,5 +1567,126 @@ Promise 的最大问题是代码冗余,原来的任务被Promise包装了一下,
 
 #### 协程
 
+传统的编程语言,早有异步编程的解决方案(多任务的解决方案)。其中有一种叫做`协程(coroutine)`,意思是多个线程互相协作,完成异步任务.
+
+协程有点像函数,又有点像线程.运行流程大致如下:
+
+- 第一步，协程`A`开始执行。
+- 第二步，协程`A`执行到一半，进入暂停，执行权转移到协程`B`。
+- 第三步，（一段时间后）协程`B`交还执行权。
+- 第四步，协程`A`恢复执行。
+
+上面流程中的协程`A`,就是异步任务,因为它分成两段(或多段)执行.
+
+举例来说,读取文件的协程写法如下
+
+```javascript
+function* asyncJob(){
+    //...some code
+  	var f = yield readFile(fileA);
+  	//...some code
+}
+```
+
+上面代码的函数`asyncJob`是一个协程,它的奥妙就在其中的`yield`命令,它表示执行到此处,执行权将交给其他协程,也就是说,`yield`命令是异步两个阶段的分界线.
+
+协程遇到`yield`命令就暂停,等到执行权返回,再从暂停的地方继续往后执行,它的最大优点,就是代码的写法非常像同步操作,如果去除`yield`命令,就一摸一样了.
 
 
+
+#### 协程的Generator 函数实现
+
+Generator函数是在协程在ES6的实现,最大特点就是可以交出函数的执行权(即暂停执行).
+
+整个Generator函数就是一个封装的异步任务,或者说是异步任务的容器.异步操作需要暂停的地方,都用`yield`语句注明,Generator函数执行方法如下:
+
+```javascript
+function* gen(x){
+    var y = yield x +2;
+  	return y;
+}
+var g = gen (1);
+g.next() // { value: 3, done: false }
+g.next() // { value: undefined, done: true }
+```
+
+上面代码中,调用Generator函数,会返回一个内部指针(即遍历器)`g`.这是Generator函数不同于普通函数的另一个地方,即执行它不会返回结果,返回的是指针对象,调用指针`g`的`next`方法,会移动内部指针(即执行异步任务的第一段),指向第一个遇到的`yield`语句,上例是执行到`x+2`为止.
+
+换言之,`next`方法的作用是分阶段执行`Generator`函数.每次调用`next`方法,会返回一个对象,表示当前阶段的信息(`value`属性和`done`属性).`value`属性是`yield`语句后面表达式的值,表示当前阶段的值;`done`属性是一个布尔值,表示Generator函数是否执行完毕,即是否还有下一个阶段.
+
+
+
+#### Generator函数的数据交换和错误处理
+
+Generator函数可以暂停执行和恢复执行,这是它能封装异步任务的根本原因,除此之外,它还有两个特性,使它可以作为异步变成的完整解决方案:函数体内外的数据交换和错误处理机制.
+
+`next`返回值的value属性,是Generator函数向外输出数据;`next`方法还可以接受参数,向Generator函数体内输入数据.
+
+```javascript
+function* gen(x){
+  var y = yield x + 2;
+  return y ;
+}
+var gen(1);
+g.next() // { value: 3, done: false }
+g.next(2) // { value: 2, done: true }
+```
+
+上面代码中,第一`next`方法的`value`属性,返回表达式`x + 2`的值`3`.第二个`next`方法带有参数`2`,这个参数可以传入Generator函数,作为上个阶段异步任务的返回结果,被函数体内的变量`y`接收,因此,这一步的`value`属性,返回的就是`2`(变量`y`的值).
+
+`传参可以作为上个阶段异步任务的返回结果`
+
+Generator函数内部还可以部署处理代码,捕获函数体外抛出的错误.
+
+```javascript
+function* gen(x){
+  try {
+      var y = yield x + 2;
+  } catch (e){
+      console.log(e);
+  }
+  return y ;
+}
+
+var g = gen(1);
+g.next();
+g.throw('出错了');
+//出错了
+```
+
+上面代码的最后一行,Generator函数体外,使用指针对象的`throw`方法抛出的错误,可以被函数体内的`try...catch`代码块捕获.这意味着,出错的代码与处理错误的代码,实现了时间和空间上的分离,这对于异步变成无疑是很重要的.
+
+
+
+#### 异步任务的封装
+
+```javascript
+var fetch = require('node-fetch');
+
+function* gen(){
+  var url = 'https://api.github.com/users/github';
+  var result = yield fetch(url);
+  console.log(result.bio);
+}
+```
+
+上面代码中，Generator 函数封装了一个异步操作，该操作先读取一个远程接口，然后从 JSON 格式的数据解析信息。就像前面说过的，这段代码非常像同步操作，除了加上了`yield`命令。
+
+执行这段代码:
+
+```javascript
+var g = gen();
+var result = g.next();
+
+result.value.then(function(data){
+  return data.json();
+}).then(function(data){
+  g.next(data);
+});
+```
+
+`data`是传参,`传参可以作为上个阶段异步任务的返回结果` 传入 result中,result保存
+
+上面代码中，首先执行 Generator 函数，获取遍历器对象，然后使用`next`方法（第二行），执行异步任务的第一阶段。由于`Fetch`模块返回的是一个 Promise 对象，因此要用`then`方法调用下一个`next`方法。
+
+可以看到，虽然 Generator 函数将异步操作表示得很简洁，但是流程管理却不方便（即何时执行第一阶段、何时执行第二阶段）。
