--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -1690,3 +1690,55 @@ result.value.then(function(data){
 上面代码中，首先执行 Generator 函数，获取遍历器对象，然后使用`next`方法（第二行），执行异步任务的第一阶段。由于`Fetch`模块返回的是一个 Promise 对象，因此要用`then`方法调用下一个`next`方法。
 
 可以看到，虽然 Generator 函数将异步操作表示得很简洁，但是流程管理却不方便（即何时执行第一阶段、何时执行第二阶段）。
+
+
+
+#### 16.4 Thunk函数
+
+Thunk函数是自动执行Generator函数的一种方法.
+
+
+
+#### 参数的求职策略
+
+一个争论的焦点是"求值策略"，即函数的参数到底应该何时求值。
+
+```javascript
+var x = 1;
+function f(m){
+  reutrn m * 2;
+}
+f(x + 5);
+```
+
+上面代码先定义函数`f`,然后向它传入表达式`x + 5`,请问这个表达式应该何时求值?
+
+一种意见是"传值调用"(call by value),即在进入函数体之前,就计算`x + 5`的值(6),再将这个值传入函数`f`,C语言就采用这种策略。
+
+```javascript
+f(x + 5)
+// 传值调用时，等同于
+f(6)
+```
+
+另一种意见是"传名调用"(call by name),即将表达式`x + 5`传入函数体,只在用到它的时候求值.Haskell语言采用这种策略
+
+```javascript
+f(x + 5)
+// 传名调用时，等同于
+(x + 5) * 2
+```
+
+传值调用和传名调用，哪一种比较好？
+
+回答是各有利弊。传值调用比较简单，但是对参数求值的时候，实际上还没用到这个参数，有可能造成性能损失。
+
+```javascript
+function f(a, b){
+  return b;
+}
+
+f(3 * x * x - 2 * x - 1, x);
+```
+
+上面代码中，函数`f`的第一个参数是一个复杂的表达式，但是函数体内根本没用到。对这个参数求值，实际上是不必要的。因此，有一些计算机学家倾向于"传名调用"，即只在执行时求值。
