--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -1729,9 +1729,7 @@ f(x + 5)
 (x + 5) * 2
 ```
 
-传值调用和传名调用，哪一种比较好？
-
-回答是各有利弊。传值调用比较简单，但是对参数求值的时候，实际上还没用到这个参数，有可能造成性能损失。
+传值调用比较简单，但是对参数求值的时候，实际上还没用到这个参数，有可能造成性能损失。
 
 ```javascript
 function f(a, b){
