--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -1,5 +1,9 @@
 # ES6笔记
 
+> 阮一峰老师写的《ECMAScript 6入门》的笔记..
+>
+> [ECMAScript 6入门](http://es6.ruanyifeng.com/)
+
 [TOC]
 
 
@@ -1699,7 +1703,7 @@ Thunk函数是自动执行Generator函数的一种方法.
 
 
 
-#### 参数的求职策略
+#### 参数的求值策略
 
 一个争论的焦点是"求值策略"，即函数的参数到底应该何时求值。
 
@@ -1740,3 +1744,4 @@ f(3 * x * x - 2 * x - 1, x);
 ```
 
 上面代码中，函数`f`的第一个参数是一个复杂的表达式，但是函数体内根本没用到。对这个参数求值，实际上是不必要的。因此，有一些计算机学家倾向于"传名调用"，即只在执行时求值。
+
