--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -1745,3 +1745,114 @@ f(3 * x * x - 2 * x - 1, x);
 
 上面代码中，函数`f`的第一个参数是一个复杂的表达式，但是函数体内根本没用到。对这个参数求值，实际上是不必要的。因此，有一些计算机学家倾向于"传名调用"，即只在执行时求值。
 
+
+
+#### Thunk函数的含义
+
+编译器的"传名调用"实现,往往是将参数放到一个临时函数之中,再将这个临时函数传入函数体,这个临时函数就叫做Thunk 函数.
+
+```javascript
+function f(m){
+    return m * 2;
+}
+f(x+5);
+//等同于
+var thunk = function () {
+    return x + 5;
+};
+
+function f(thunk) {
+    return thunk() * 2;
+}
+```
+
+上面代码中,函数f的参数`x + 5`被一个函数替换了.凡是用到原参数的地方,对`Thunk`函数求值即可,
+
+这就是Thunk函数的定义,它是"传名调用"的一种实现策略,用来替换某个表达式.
+
+> 就是参数被封装在了一个临时函数里面,这个参数使用时候才调用这个函数,这时才会计算.
+
+#### JavaScript 语言的 Thunk 函数
+
+javaScript语言是传值调用,它的Thunk函数含义有所不同,在JavaScript 语言中,Thunk函数替换的不是表达式,而是多参数函数,将其替换成一个接受回调函数作为参数的单参数函数
+
+```javascript
+//正常版本的readFile(多参数版本)
+fs.readFile(fileName,callback);
+
+//Thunk 版本的readFile(单参数版本);
+var Thunk = function(fileName){
+  return function (callback){
+    retrun fs.readFile(fileName,callback);
+  }
+}
+var readFileThunk = Thunk(fileName);
+redFileThunk(callback);
+```
+
+上面代码中,`fs`模块的`readFile`方法是一个多参数函数,两个参数分别为文件名和回调函数.经过转换器处理,它变成了一个单参数函数,只接受回调函数作为参数.这个单参数版本,就叫做Thunk函数
+
+任何函数，只要参数有回调函数，就能写成 Thunk 函数的形式。
+
+```javascript
+// ES5版本
+var Thunk = function(fn){
+  return function (){
+    var args = Array.prototype.slice.call(arguments);
+    return function (callback){
+      args.push(callback);
+      return fn.apply(this, args);
+    }
+  };
+};
+
+// ES6版本
+const Thunk = function(fn) {
+  return function (...args) {
+    return function (callback) {
+      return fn.call(this, ...args, callback);
+    }
+  };
+};
+```
+
+使用转换器,生成`fs.readFile`的Thunk函数.
+
+```javascript
+var readFileThunk = Thunk(fs.readFile);
+readFileThunk(fileA)(callback);
+```
+
+另一个例子
+
+```javascript
+function f(a, cb) {
+  cb(a);
+}
+const ft = Thunk(f);
+//转化为
+ft = function(...args){
+  return function (callback) {
+    return fn.call(this, ...args, callback);//fn为function f
+}
+
+ft(1)(console.log) // 1
+ft(1)//转化为
+functiion (callback){
+    retrun fn.call(this,1,callback);
+}
+//再将callback穿进去
+fn.call(this, 1, console.log)
+//等同于
+function f(1,console.log){
+    console.log(1);
+}();
+
+```
+
+> Thunk作用就是将多参数,转换为单参数的闭包
+
+
+
+#### Thunkify 模块
+
