--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -1697,7 +1697,7 @@ result.value.then(function(data){
 
 
 
-#### 16.4 Thunk函数
+### 16.4 Thunk函数
 
 Thunk函数是自动执行Generator函数的一种方法.
 
@@ -1856,3 +1856,428 @@ function f(1,console.log){
 
 #### Thunkify 模块
 
+生产环境的转换器,使用Thunkify模块.
+
+```
+npm install thunkify
+```
+
+使用方式如下.
+
+```javascript
+var thunkify =  require('thunkify');
+var fs = require('fs');
+
+var read = thunkify(fs.readFile);
+read('package.json')(function(err,str){
+    // ...some code
+});
+```
+
+Thunkify源码
+
+```javascript
+function thunkify(fn) {
+  return function() {
+    var args = new Array(arguments.length);
+    var ctx = this;
+
+    for (var i = 0; i < args.length; ++i) {
+      args[i] = arguments[i];
+    }
+
+    return function(done) {
+      var called;
+
+      args.push(function() {
+        if (called) return;
+        called = true;
+        done.apply(null, arguments);
+      });
+
+      try {
+        fn.apply(ctx, args);
+      } catch (err) {
+        done(err);
+      }
+    };
+  };
+}
+```
+
+比之前的简易版多了一个检查机制,变量`called`确保函数只运行一次,这样的设计与下文的 Generator 函数相关。
+
+```javascript
+function f(a,b,callback){
+    var sum = a + b;
+  	callback(sum);
+  	callback(sum);
+}
+var ft = thunkify(f);
+var print = console.log.bind(console);
+ft(1, 2)(print);
+// 3
+```
+
+上面代码中，由于`thunkify`只允许回调函数执行一次，所以只输出一行结果。
+
+
+
+#### Generator 函数的流程管理
+
+Thunk 函数现在可以用于 Generator 函数的自动流程管理。
+
+Generator 函数可以自动执行.
+
+```javascript
+function* gen(){
+    //...
+}
+
+var g = gen();
+var res = g.next();
+
+while(!res.done){
+  console.log(res.value);
+  res = g.next();
+}
+```
+
+上面代码中，Generator 函数`gen`会自动执行完所有步骤。
+
+
+
+这不适合异步操作,因为无法保证前一步已经执行完,才执行后一步.上面代码中，Generator 函数`gen`会自动执行完所有步骤。这时，Thunk 函数就能派上用处。以读取文件为例。下面的 Generator 函数封装了两个异步操作。
+
+```javascript
+var fs = require('fs');
+var thunkify = require('thunkify');
+var readFileThunk = thunkify(fs.readFile);
+
+var gen = function* (){
+  var r1 = yield readFileThunk('/etc/fstab');
+  console.log(r1.toString());
+  var r2 = yield readFileThunk('/etc/shells');
+  console.log(r2.toString());
+}
+```
+
+上面代码中，`yield`命令用于将程序的执行权移出 Generator 函数，那么就需要一种方法，将执行权再交还给 Generator 函数。(g.next();)
+
+这种方法就是 Thunk 函数，因为它可以在回调函数里，将执行权交还给 Generator 函数。为了便于理解，我们先看如何手动执行上面这个 Generator 函数。
+
+```javascript
+var g = gen();
+
+var r1 = g.next();
+r1.value(function(err,data){
+  if(err) throw err;
+  var r2 = g.next(data);
+  r2.value(function(err,data){
+      if(err) throw err;
+      g.next(data);
+  });
+});
+```
+
+变量`g`是Generator 函数的内部指针,表示当前执行到哪一步,`next`将指针移动到下一步,并且将该步的信息返回(`value`属性和`done`属性).
+
+ Generator 函数的执行过程，其实是将同一个回调函数，反复传入`next`方法的`value`属性。这使得我们可以用递归来自动完成这个过程。
+
+
+
+#### Thunk 函数的自动流程管理
+
+Thunk 函数真正的威力,在于可以自动执行Generator函数.
+
+```javascript
+function run(fn) {
+    var gen = fn();
+  
+    function next(err,data){
+        var result = gen.next(data);
+        if(result.done) return;
+      	result.value(next);
+    }
+   
+    next();
+}
+
+function* g(){
+    //....
+}
+
+run(g);
+```
+
+`run`函数就是一个 `Generator`函数的自执行器,内部的`next`函数就是 Thunk 的回调函数.首先`next`先移动到Generator函数的下一步,然后判断这个是否结束了(result.done),如果还没结束,就将`next`函数在传入到Thunk函数里面(作为参数传入到`result.value`属性当中,因为里面的是一个`Thunk`所以返回的是一个`Function`,`data`作为参数,传入`Thunk`返回的`Function`当中),否则就退出
+
+有了这个执行器，执行 Generator 函数方便多了。不管内部有多少个异步操作，直接把 Generator 函数传入`run`函数即可。当然，前提是每一个异步操作，都要是 Thunk 函数，也就是说，跟在`yield`命令后面的必须是 Thunk 函数(就是将一个`多参数`的函数,拆分成一个`单参数多return(return的fn传入另一个参数)`的函数)。
+
+```javascript
+var g = function* (){
+  var f1 = yield readFileThunk('fileA');
+  var f2 = yield readFileThunk('fileB');
+  // ...
+  var fn = yield readFileThunk('fileN');
+};
+
+run(g);
+```
+
+上面代码中，函数`g`封装了`n`个异步的读取文件操作，只要执行`run`函数，这些操作就会自动完成。这样一来，异步操作不仅可以写得像同步操作，而且一行代码就可以执行。
+
+Thunk 函数并不是 Generator 函数自动执行的唯一方案。因为自动执行的关键是，必须有一种机制，自动控制 Generator 函数的流程，接收和交还程序的执行权。回调函数可以做到这一点，Promise 对象也可以做到这一点。
+
+
+
+### 16.5 Co模块
+
+#### 基本用法
+
+Generator 函数，用于依次读取两个文件。
+
+```javascript
+var gen = function* () {
+  var f1 = yield readFile('/etc/fstab');
+  var f2 = yield readFile('/etc/shells');
+  console.log(f1.toString());
+  console.log(f2.toString());
+};
+//co 模块可以让你不用编写 Generator 函数的执行器。
+var co = require('co');
+co(gen);
+//co函数返回一个Promise对象，因此可以用then方法添加回调函数。
+co(gen).then(function (){
+  console.log('Generator 函数执行完成');
+});
+```
+
+#### Co模块的原理
+
+Generator 就是一个异步操作的容器。它的自动执行需要一种机制，当异步操作有了结果，能够自动交回执行权。
+
+两种方法可以做到这一点。
+
+（1）回调函数。将异步操作包装成 Thunk 函数，在回调函数里面交回执行权。
+
+（2）Promise 对象。将异步操作包装成 Promise 对象，用`then`方法交回执行权。
+
+co 模块其实就是将两种自动执行器（Thunk 函数和 Promise 对象），包装成一个模块。使用 co 的前提条件是，Generator 函数的`yield`命令后面，只能是 Thunk 函数或 Promise 对象。如果数组或对象的成员，全部都是 Promise 对象，也可以使用 co，详见后文的例子。（co v4.0版以后，`yield`命令后面只能是 Promise 对象，不再支持 Thunk 函数。）
+
+
+
+#### 基于Promise 对象的自动执行
+
+首先，把`fs`模块的`readFile`方法包装成一个 Promise 对象。
+
+```javascript
+var fs = require('fs');
+
+var readFile = function (fileName){
+    return new Promise(function(resolve,reject){
+        fs.readFile(fileName,function(error,data){
+            if(error) return reject(error);
+          	resolve(data);
+        });
+    });
+};
+
+var gen = function* (){
+  var f1 = yield readFile('/etc/fstab');
+  var f2 = yield readFile('/etc/shells');
+  console.log(f1.toString());
+  console.log(f2.toString());
+};
+
+//手动执行
+var g =gen();
+g.next().value.then(function(data){
+    g.next(data).value.then(function(data){
+        g.next(data);
+    })
+}
+```
+
+手动执行其实就是用`then`方法，层层添加回调函数。理解了这一点，就可以写出一个自动执行器。用`then`代替了`Thunk`函数回调的方法
+
+```javascript
+function run(gen){
+    var g = gen();
+  	function next(data){
+        var result = g.next(data);
+      	if(result.done) return result.value;
+      	result.value.then(function(data){
+            next(data);
+        });
+    }
+  	next();
+}
+run(gen);
+```
+
+> 其实和`THUNK`的run基本一致,实现方法改变了而已
+
+只要 Generator 函数还没执行到最后一步，`next`函数就调用自身，以此实现自动执行。
+
+
+
+#### co模块的源码
+
+```javascript
+//首先，co 函数接受 Generator 函数作为参数，返回一个 Promise 对象。
+function co(gen){
+    var ctx = this;
+  	return new Promise(function(resolve,rejcet){});
+}
+
+//在返回的 Promise 对象里面，co 先检查参数gen是否为 Generator 函数。如果是，就执行该函数，得到一个内部指针对象；如果不是就返回，并将 Promise 对象的状态改为resolved。
+function co(gen){
+    var ctx = this;
+  	return new Promise(function(resolve,rejcet){
+        if(typeof gen === 'function') gen = gen.call(ctx);
+      	if(!gen||typeof gen.next !=='function') return resolve(gen);
+    });
+}
+
+//接着，co 将 Generator 函数的内部指针对象的next方法，包装成onFulfilled函数。这主要是为了能够捕捉抛出的错误。
+function co(gen){
+    var ctx = this;
+  	return new Promise(function(resolve,rejcet){
+        if(typeof gen === 'function') gen = gen.call(ctx);
+      	if(!gen||typeof gen.next !=='function') return resolve(gen);
+      
+      	onFulfilled();
+      	function onFulfilled(res){
+            var ret;
+          	try{
+                ret = gen.next(res);
+            } catch(e){
+                return reject(e);
+            }
+          	next(ret);
+        }
+    });
+}
+// 最后，就是关键的next函数，它会反复调用自身。
+// 第一行，检查当前是否为 Generator 函数的最后一步，如果是就返回。
+// 第二行，确保每一步的返回值，是 Promise 对象。
+// 第三行，使用then方法，为返回值加上回调函数，然后通过onFulfilled函数再次调用next函数。
+// 第四行，在参数不符合要求的情况下（参数非 Thunk 函数和 Promise 对象），将 Promise 对象的状态改为rejected，从而终止执行。
+第四行，在参数不符合要求的情况下（参数非 Thunk 函数和 Promise 对象），将 Promise 对象的状态改为rejected，从而终止执行。
+function co(gen){
+    var ctx = this;
+  	return new Promise(function(resolve,rejcet){
+        if(typeof gen === 'function') gen = gen.call(ctx);
+      	if(!gen||typeof gen.next !=='function') return resolve(gen);
+      
+      	onFulfilled();
+      	function onFulfilled(res){
+            var ret;
+          	try{
+                ret = gen.next(res);
+            } catch(e){
+                return reject(e);
+            }
+          	next(ret);
+        }
+      	function next(ret){
+          // 第一行，检查当前是否为 Generator 函数的最后一步，如果是就返回。
+          if(ret.done) return resolve(ret.value);
+          // 第一行，检查当前是否为 Generator 函数的最后一步，如果是就返回。
+          var value = toPromise.call(ctx,ret.value);
+          // 第三行，使用then方法，为返回值加上回调函数，然后通过onFulfilled函数再次调用next函数。
+          if(value && isPromise(value)) return value.then(onFulfilled,onRejected);
+          // 第四行，在参数不符合要求的情况下（参数非 Thunk 函数和 Promise 对象），将 Promise 对象的              状态改为rejected，从而终止执行。
+          return onRejected(
+            new TypeError(
+              'You may only yield a function, promise, generator, array, or object, '
+              + 'but the following object was passed: "'
+              + String(ret.value)
+              + '"'
+            )
+          );
+        }
+    });
+}
+```
+
+
+
+#### 处理并发的异步操作
+
+co 支持并发的异步操作，即允许某些操作同时进行，等到它们全部完成，才进行下一步。
+
+这时，要把并发的操作都放在数组或对象里面，跟在`yield`语句后面。
+
+```javascript
+//数组的写法
+co(function* (){
+  var res = yield [
+      Promise.resolve(1),
+      Promise.resolve(2)
+  ];
+  console.log(res);
+}).catch(onerror);
+
+//对象写法
+co(function* (){
+  var res = yield {
+    1:Promise.resolve(1),
+    2:Promise.resolve(2)
+  };
+  console.log(res);
+}).catch(onerror)
+```
+
+```javascript
+co(function* () {
+  var values = [n1, n2, n3];
+  yield values.map(somethingAsync);
+});
+
+function* somethingAsync(x) {
+  // do something async
+  return y
+}
+```
+
+上面的代码允许并发三个`somethingAsync`异步操作，等到它们全部完成，才会进行下一步。
+
+#### 实例：处理 Stream
+
+Node 提供 Stream 模式读写数据，特点是一次只处理数据的一部分，数据分成一块块依次处理，就好像“数据流”一样。这对于处理大规模数据非常有利。Stream 模式使用 EventEmitter API，会释放三个事件。
+
+- `data`事件：下一块数据块已经准备好了。
+- `end`事件：整个“数据流”处理“完了。
+- `error`事件：发生错误。
+
+使用`Promise.race()`函数，可以判断这三个事件之中哪一个最先发生，只有当`data`事件最先发生时，才进入下一个数据块的处理。从而，我们可以通过一个`while`循环，完成所有数据的读取。
+
+```
+const co = require('co');
+const fs = require('fs');
+
+const stream = fs.createReadStream('./les_miserables.txt');
+let valjeanCount = 0;
+
+co(function*() {
+  while(true) {
+    const res = yield Promise.race([
+      new Promise(resolve => stream.once('data', resolve)),
+      new Promise(resolve => stream.once('end', resolve)),
+      new Promise((resolve, reject) => stream.once('error', reject))
+    ]);
+    if (!res) {
+      break;
+    }
+    stream.removeAllListeners('data');
+    stream.removeAllListeners('end');
+    stream.removeAllListeners('error');
+    valjeanCount += (res.toString().match(/valjean/ig) || []).length;
+  }
+  console.log('count:', valjeanCount); // count: 1120
+});
+```
+
+上面代码采用 Stream 模式读取《悲惨世界》的文本文件，对于每个数据块都使用`stream.once`方法，在`data`、`end`、`error`三个事件上添加一次性回调函数。变量`res`只有在`data`事件发生时才有值，然后累加每个数据块之中`valjean`这个词出现的次数。
