--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -2281,3 +2281,176 @@ co(function*() {
 ```
 
 上面代码采用 Stream 模式读取《悲惨世界》的文本文件，对于每个数据块都使用`stream.once`方法，在`data`、`end`、`error`三个事件上添加一次性回调函数。变量`res`只有在`data`事件发生时才有值，然后累加每个数据块之中`valjean`这个词出现的次数。
+
+
+
+
+
+## 17.Async 函数
+
+### 17.1 含义
+
+async 函数是什么？一句话，它就是 Generator 函数的语法糖。
+
+```javascript
+//依次读取两个文件
+const fs = require('fs');
+
+const readFile = function (fileName) {
+    return new Promise(function(resolve,reject){
+        fs.readFile(fileName,function(error,data){
+            if (error) return reject(error);
+          	resolve(data);
+        });
+    });
+};
+
+//之前的方式
+const gen = function* (){
+  const f1 = yield readFile('/etc/fstab');
+  const f2 = yield readFile('/etc/shells');
+  console.log(f1.toString());
+  console.log(f2.toString());
+}
+//执行的话要
+var g =gen();
+g.next();
+//或者使用co
+co(gen);
+co(gen).then(
+  function(){//..somecode
+  });
+
+//写成
+const asyncReadFile = async function (){
+	const f1 = await readFile('/etc/fstab');
+  	const f2 = await readFile('/etc/shells');
+    console.log(f1.toString());
+  	console.log(f2.toString());
+};
+```
+
+`async`函数就是将 Generator 函数的星号（`*`）替换成`async`，将`yield`替换成`await`。
+
+`async`函数对 Generator 函数的改进，体现在以下四点。
+
+
+
+(1) 内置执行器
+
+Generator函数的执行必须靠执行器(g.next()),所以有了`co`模块,而`async`函数里有自带执行器,也就是说`async`函数的执行,与普通函数一摸一样,只需要一行.
+
+```javascript
+asyncReadFile();
+```
+
+调用后,就会自动执行,输出最后结果.这完全不像 Generator 函数，需要调用`next`方法，或者用`co`模块，才能真正执行，得到最后结果。
+
+
+
+(2) 更好的语义
+
+`async`和`await`，比起星号和`yield`，语义更清楚了。`async`表示函数里有异步操作，`await`表示紧跟在后面的表达式需要等待结果。
+
+
+
+(3) 更广的适用性
+
+`co`模块约定，`yield`命令后面只能是 Thunk 函数或 Promise 对象(4.0之后只能是Promise)，而`async`函数的`await`命令后面，可以是Promise 对象和原始类型的值（数值、字符串和布尔值，但这时等同于同步操作）。
+
+
+
+(4) 返回值是Promise
+
+`async`函数的返回值是 Promise 对象，这比 Generator 函数的返回值是 Iterator 对象方便多了。可以用`then`方法指定下一步的操作。
+
+
+
+进一步说，`async`函数完全可以看作多个异步操作，包装成的一个 Promise 对象，而`await`命令就是内部`then`命令的语法糖。
+
+
+
+### 17.2 基本用法
+
+`async`函数返回一个Promise对象,可以使用`then`方法添加回调函数。
+
+当函数执行的时候，一旦遇到`await`就会返回,等到异步操作完成,(交回制定权),再接着执行函数体内后面的语句.
+
+```javascript
+async function getStockPriceByName(name) {
+  const symbol = await getStockSymbol(name);
+  const stockPrice = await getStockPriceByName(symbol);
+  return stockPrice;
+}
+getStockPriceByName("goog").then(function(reslt) {
+  console.log(result);
+});
+```
+
+函数前面的`async`关键字，表明该函数内部有异步操作。调用该函数时，会立即返回一个`Promise`对象。
+
+下面是另一个例子，指定多少毫秒后输出一个值。
+
+```javascript
+function timeout(ms) {
+  return new Promise(resolve => {
+    setTimeout(resolve, ms);
+  });
+}
+
+async function asyncPrint(value, ms) {
+  await timeout(ms);
+  console.log(value);
+}
+asyncPrint("hello world", 50);
+```
+
+由于`async`函数返回的是 Promise 对象，可以作为`await`命令的参数。所以，上面的例子也可以写成下面的形式。
+
+```javascript
+async function timeout(ms) {
+  await new Promise(resolve => {
+    setTimeout(resolve, ms);
+  });
+}
+
+async function asyncPrint(value, ms) {
+  await timeout(ms);
+  console.log(value);
+}
+
+asyncPrint("hello world", 50);
+```
+
+async 函数有多种使用形式。
+
+```javascript
+// 函数声明
+async function foo() {}
+
+// 函数表达式
+const foo = async function () {};
+
+// 对象的方法
+let obj = { async foo() {} };
+obj.foo().then(...)
+
+// Class 的方法
+class Storage {
+  constructor() {
+    this.cachePromise = caches.open('avatars');
+  }
+
+  async getAvatar(name) {
+    const cache = await this.cachePromise;
+    return cache.match(`/avatars/${name}.jpg`);
+  }
+}
+
+const storage = new Storage();
+storage.getAvatar('jake').then(…);
+
+// 箭头函数
+const foo = async () => {};
+```
+
