--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -2394,7 +2394,10 @@ getStockPriceByName("goog").then(function(reslt) {
 ```javascript
 function timeout(ms) {
   return new Promise(resolve => {
-    setTimeout(resolve, ms);
+    setTimeout(function() {
+      console.log('这是里面的');
+      resolve();
+    }, ms);
   });
 }
 
@@ -2402,7 +2405,7 @@ async function asyncPrint(value, ms) {
   await timeout(ms);
   console.log(value);
 }
-asyncPrint("hello world", 50);
+asyncPrint('hello world', 50);
 ```
 
 由于`async`函数返回的是 Promise 对象，可以作为`await`命令的参数。所以，上面的例子也可以写成下面的形式。
@@ -2454,3 +2457,347 @@ storage.getAvatar('jake').then(…);
 const foo = async () => {};
 ```
 
+
+
+### 17.3  语法
+
+#### 返回Promise 对象
+
+`async` 函数返回一个Promise对象.
+
+`async`函数内部`return`语句返回的值,会成为`then`方法回调函数的参数.
+
+```js
+const f =async () => {
+  return 'hello world';
+};
+f().then(v => console.log(v));
+```
+
+`async`函数内部抛出错误,会导致返回的Promise对象变为`reject`状态.抛出的错误对象会被`catch`方法回调函数接收到
+
+```js
+const f = async () => {
+  throw new Error('wrong!');
+};
+f().then(
+  v => console.log(v),
+  e => {
+    console.log(e);
+  }
+);
+```
+
+
+
+#### Promise 对象的状态变化
+
+`async`函数返回的Promise 对象,必须等到内部所有`await`命令后面的Promise对象执行完,才会发生状态改变,除非遇到`return`语句或者抛出错误,也就是说,只有`async`函数内部的异步操作执行完,才会执行`then`方法的回调
+
+```js
+async function getTitle(url) {
+  let response = await fetch(url);
+  let html = await response.text();
+  return html.match(/<title>([\s\S]+)<\/title>/i)[1];
+}
+getTitle('https://www.baidu.com/').then(console.log);
+```
+
+上面代码中，函数`getTitle`内部有三个操作：抓取网页、取出文本、匹配页面标题。只有这三个操作全部完成，才会执行`then`方法里面的`console.log`。
+
+
+
+#### await命令
+
+正常情况下,`await`命令后面会跟着一个Promise对象,如果不是,会将它转变成为一个立即`resolve`的Promise对象.
+
+```js
+async function f() {
+  return await 123;
+}
+f().then(v => console.log(v));
+```
+
+`await`命令的参数是数值`123`，它被转成 Promise 对象，并立即`resolve`。
+
+`await`命令后面的Promise对象如果变为`reject`状态,则`reject`的参数会被`catch`方法的回调函数接收到.
+
+```js
+async function f() {
+  await Promise.reject("It's wrong!");
+}
+f()
+  .then(v => console.log(v))
+  .catch(e => console.log(e));
+//It's wrong!
+```
+
+即使没有在`await `中没有`reutrn` ,但是`reject`方法的参数依然传入了`catch`方法的回调函数,如果在`await`前面加上`return`,效果是一样的。
+
+
+
+只要一个`await`语句后面的Promise变成`reject`,那么整个`async`函数都会中断执行.
+
+```js
+async function f() {
+  await Promise.reject('出错了');
+  await Promise.resolve('hello world'); // 不会执行
+}
+```
+
+
+
+希望即使前一个异步操作失败,也不要中断后面的异步操作,这时可以将第一个`await`放在`try...catch`结构里面,这样不管这个异步操作是否承购,第二个`await`都会执行;
+
+ps:那么多个怎么办... 多个都放在try里面?那么怎么输出错误呢?
+
+```js
+async function f() {
+  try {
+    await Promise.reject('出错了1');
+    await Promise.reject('出错了2');
+    await Promise.reject('出错了3');
+  } catch(e) {
+    console.log(e);
+  }
+  return await Promise.resolve('hello world');
+}
+
+f()
+.then(v => console.log(v))
+// 出错了1
+// hello world
+```
+
+另一种方法是`await`后面的 Promise 对象再跟一个`catch`方法，处理前面可能出现的错误。
+
+```js
+async function f() {
+  await Promise.reject('出错了1').catch(e => console.log(e));
+  await Promise.reject('出错了2').catch(e => console.log(e));
+  await Promise.reject('出错了3').catch(e => console.log(e));
+  return await Promise.resolve('hello world');
+}
+
+f().then(v => console.log(v));
+// 出错了1
+// 出错了2
+// 出错了3
+// hello world
+```
+
+
+
+#### 错误处理
+
+如果`await`后面的异步操作出错,那么等同于`async`函数返回的Promise对象被`reject`.
+
+```js
+async function f() {
+  await new Promise((resolve, reject) => {
+    throw new Error('出错了');
+  });
+}
+
+f()
+  .then(v => console.log(v))
+  .catch(e => console.log(e));
+// Error: 出错了
+```
+
+上面代码中，`async`函数`f`执行后，`await`后面的 Promise 对象会抛出一个错误对象，导致`catch`方法的回调函数被调用，它的参数就是抛出的错误对象。
+
+
+
+为了防止出错,可以将其放在`try...catch`代码块中:
+
+```js
+async function f() {
+  try {
+    await new Promise(function(resolve, reject) {
+      throw new Error('出错了');
+    });
+  } catch (e) {
+    console.log(e);
+  }
+  return await 'hello world';
+}
+f()
+  .then(v => {
+    console.log(v);
+  })
+  .catch(e => console.log(e));
+// 出错了
+// hello world
+```
+
+如果有多个`await`命令，可以统一放在`try...catch`结构中。
+
+```js
+async function main() {
+  try {
+    const val1 = await firstStep();
+    const val2 = await secondStep(val1);
+    const val3 = await thirdStep(val1, val2);
+
+    console.log('Final: ', val3);
+  }
+  catch (err) {
+    console.error(err);
+  }
+}
+```
+
+下面的例子使用`try...catch`结构，实现多次重复尝试。
+
+```js
+const superagent = require('superagent');
+const NUM_RETRIES = 3;
+
+async function test() {
+  let i;
+  for (i = 0; i < NUM_RETRIES; ++i) {
+    try {
+      await superagent.get('http://google.com/this-throws-an-error');
+      break;
+    } catch(err) {
+      console.error(err);
+    }
+  }
+  console.log(i); //3
+}
+
+test();
+```
+
+上面代码中，如果`await`操作成功，就会使用`break`语句退出循环；如果失败，会被`catch`语句捕捉，然后进入下一轮循环。
+
+
+
+#### 使用注意点:
+
+1. `await`命令后面的是`Promise`对象,运行结果可能是`rejected`,所以最好把`await`命令放在`try...catch`代码块中.
+
+```js
+async function myFunction() {
+  try {
+    await somethingThatReturnsAPromise();
+  } catch (err) {
+    console.log(err);
+  }
+}
+
+// 另一种写法
+
+async function myFunction() {
+  await somethingThatReturnsAPromise()
+  .catch(function (err) {
+    console.log(err);
+  });
+}
+```
+
+2. 多个`await`命令后面的异步操作，如果不存在继发关系，最好让它们同时触发。
+
+```js
+let foo = await getFoo();
+let bar = await getBar();
+```
+
+`getFoo()`和`getBar()`是两个不互相依赖的独立的异步操作,被写成继发关系,这样回导致只有`getFoo`完成后,才会执行`getBar`,这样比较耗费时间
+
+所以需要把他们同时出发,缩短程序的执行时间。
+
+```js
+//方法1:
+let [foo,bar]=await Promise.all([getFoo(),getBar()]);
+
+//方法2:
+let fooPromise = getFoo();
+let BarPromise = getBar();
+let foo = await fooPromise;
+let bar = await barPromise;
+```
+
+上面两种写法，`getFoo`和`getBar`都是同时触发，这样就会缩短程序的执行时间。
+
+3. `await`命令只能用在`async`函数之中，如果用在普通函数，就会报错。
+
+```js
+async function dbFuc(db) {
+  let docs = [{}, {}, {}];
+
+  // 报错
+  docs.forEach(function (doc) {
+    await db.post(doc);
+  });
+}
+```
+
+上面代码会报错，因为`await`用在普通函数之中了。但是，如果将`forEach`方法的参数改成`async`函数，也有问题。
+
+```js
+function dbFuc(db) { //这里不需要 async
+  let docs = [{}, {}, {}];
+
+  // 可能得到错误结果
+  docs.forEach(async function (doc) {
+    await db.post(doc);
+  });
+}
+```
+
+上面代码可能不会正常工作，原因是这时三个`db.post`操作将是并发执行，也就是同时执行，而不是继发执行。正确的写法是采用`for`循环。
+
+```js
+async function dbFuc(db) {
+  let docs = [{}, {}, {}];
+
+  for (let doc of docs) {
+    await db.post(doc);
+  }
+}
+```
+
+如果确实希望多个请求并行执行,可以使用`Promise.all`方法,当三个请求都会`resolved`时,下面两种写法效果相同.
+
+```js
+async function dbFunc(db) {
+  let docs = [{}, {}, {}];
+  let promises = docs.map(doc => doc.post(doc));
+
+  let results = await Promise.all(promises);
+  console.log(results);
+}
+
+// 其他写法
+
+async function dbFunc(db) {
+  let docs = [{}, {}, {}];
+  let promises = docs.map(doc => doc.post(doc));
+
+  let results = [];
+  for (let promise of promises) {
+    results.push(await promise);
+  }
+  console.log(results);
+}
+```
+
+目前，[`@std/esm`](https://www.npmjs.com/package/@std/esm)模块加载器支持顶层`await`，即`await`命令可以不放在 async 函数里面，直接使用。
+
+```js
+// async 函数的写法
+const start = async () => {
+  const res = await fetch('google.com');
+  return res.text();
+};
+
+start().then(console.log);
+
+// 顶层 await 的写法
+const res = await fetch('google.com');
+console.log(await res.text());
+```
+
+上面代码中，第二种写法的脚本必须使用`@std/esm`加载器，才会生效。
