--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -2801,3 +2801,213 @@ console.log(await res.text());
 ```
 
 上面代码中，第二种写法的脚本必须使用`@std/esm`加载器，才会生效。
+
+
+
+### 17.4 async 函数的实现原理
+
+async 函数的实现原理,就是将Generator函数和自动执行器,包装在一个函数里。
+
+```js
+async function fn(args) {
+  //... some code
+}
+
+//等同于
+function fn(args) {
+  return spawn(function*() {
+    //...
+  });
+}
+```
+
+
+
+所有的`async`函数都可以写成上面的第二种形式,其中`spawn`函数就是自动执行器。
+
+```js
+function spawn(genF) {
+  return new Promise(function(resolve, reject) {
+    const gen = genF();
+    function step(nextF) {
+      let next;
+      try {
+        next = nextF();
+      } catch (e) {
+        return reject(e);
+      }
+      if (next.done) {
+        return resolve(next.value);
+      }
+      Promise.resolve(next.value).then(
+        function(v) {
+          step(function() {
+            return gen.next(v);
+          });
+        },
+        function(e) {
+          step(function() {
+            returngen.throw(e);
+          });
+        }
+      );
+    }
+    step(function() {
+      return gen.next(undefined);
+    });
+  });
+}
+/**
+ * 函数genF进去后,立即执行,并且传入他的next值到step中,
+ * 在step中,会尝试执行,genF.next(), 如果genF.next是已经完成了
+ * 没有后续的函数了,则直接 resolve genF.next.value
+ * 如果还没有done.则将genF.next.value作为参数,传到下一步去,
+ * 继续执行step(gen.next.next);
+ */
+```
+
+
+
+### 17.5 与其他异步处理方法的比较
+
+假定某个 DOM 元素上面，部署了一系列的动画，前一个动画结束，才能开始后一个。如果当中有一个动画出错，就不再往下执行，返回上一个成功执行的动画的返回值。
+
+
+
+####  Promise
+
+```js
+function chainAnimationsPromise(elem, animations) {
+  // 变量ret用来保存上一个动画的返回值
+  let ret = null;
+
+  // 创建一个空的Promise
+  let p = Promise.resolve();
+
+  //利用then,添加所有方法
+  for (let anim of animations) {
+    p = p.then(function(val) {
+      ret = val;
+      return anim(elem);
+    });
+  }
+
+  // 返回一个部署了错误捕捉机制的Promise
+  return p
+    .catch(function(e) {
+      /* 忽略错误，继续执行 */
+    })
+    .then(function() {
+      //返回上一个成功执行的动画的返回值
+      return ret;
+    });
+}
+```
+
+Promise 的写法比回调函数的写法大大改进，但是一眼看上去，代码完全都是 Promise 的 API（`then`、`catch`等等），操作本身的语义反而不容易看出来。
+
+
+
+#### Generator
+
+```js
+function chainAnimationGenerator(elem, animations) {
+  return spawn(function*() {
+    // 返回值
+    let ret = null;
+    // try去尝试
+    try {
+      for (let anim of animations) {
+        // 把控制权交给到 anim(elem)中,执行完才回来
+        ret = yield anim(elem);
+      }
+    } catch (e) {
+      /* 忽略错误，继续执行 */
+    }
+    return ret;
+  });
+}
+```
+
+上面代码使用 Generator 函数遍历了每个动画，语义比 Promise 写法更清晰，用户定义的操作全部都出现在`spawn`函数的内部。这个写法的问题在于，必须有一个任务运行器，自动执行 Generator 函数，上面代码的`spawn`函数就是自动执行器，它返回一个 Promise 对象，而且必须保证`yield`语句后面的表达式，必须返回一个 Promise。
+
+
+
+#### async函数写法
+
+```js
+async function chainAnimationsAsync(elem, animations) {
+  let ret = null;
+  try {
+    for (let anim of animations) {
+      ret = await anim(elem);
+    }
+  } catch (e) {
+    /* 忽略错误，继续执行 */
+  }
+  return ret;
+}
+```
+
+可以看到Async函数的实现最简洁，最符合语义，几乎没有语义不相关的代码。它将Generator写法中的自动执行器，改在语言层面提供，不暴露给用户，因此代码量最少。如果使用Generator写法，自动执行器需要用户自己提供。
+
+ps:个人感觉async的写法和Generator 写法一样..只是将自执行函数spawn隐藏起来,上方已经说明async其实就是一个自执行的Generator
+
+
+
+#### 17.6 实例:按顺序完成异步操作
+
+实际开发中,经常遇到一组异步操作,需要按照顺序完成。比如，依次远程读取一组URL，然后按照读取的顺序输出结果。
+
+Promise的写法如下.
+
+```js
+function logInOrder(urls) {
+  // 远程读取所有URL
+  const textPromises = urls.map(url => {
+    return fetch(url).then(response => response.text());
+  });
+
+  // 按次序输出
+  textPromises.reduce((chain, textPromise) => {
+    return chain.then(() => textPromise).then(text => console.log(text));
+  }, Promise.resolve());
+}
+```
+
+上面代码使用`fetch`方法,同时远程读取一组URL.每个`fetch`操作都返回一个Promise对象,放入`textPromises`数组,然后`reduce`方法依次执行处理每个Promise对象,然后使用`then`,将所有Promise对象连起来,因此就可以依次输出结果.
+
+
+
+`async`函数实现
+
+```js
+async function logInOrder(urls) {
+  for (const url of urls) {
+    const response = await fetch(url);
+    console.log(await response.text());
+  }
+}
+```
+
+
+
+上面代码优化,可是所有的操作都是继发, 只有前一个`await fetch(url)`返回结果,才会读取下一个URL,这样做效率很差.我们需要并发的发出请求
+
+```js
+async function logInOrder(fnList) {
+  // 并发读取远程URL
+  const textPromises = fnList.map(async fn => {
+    const response = await fn;
+    console.log(response);
+    return response;
+  });
+
+  // 按次序输出
+  for (const textPromise of textPromises) {
+    console.log(textPromise);
+  }
+}
+```
+
+虽然`map`方法的参数是`async`函数,但是它是并发执行的,因为只有`async`函数内部是继发执行,外部不受影响,后面的`for...of`循环内部使用了`await`,因此实现了按顺序输出.
