--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -2955,7 +2955,7 @@ ps:个人感觉async的写法和Generator 写法一样..只是将自执行函数
 
 
 
-#### 17.6 实例:按顺序完成异步操作
+### 17.6 实例:按顺序完成异步操作
 
 实际开发中,经常遇到一组异步操作,需要按照顺序完成。比如，依次远程读取一组URL，然后按照读取的顺序输出结果。
 
@@ -3011,3 +3011,262 @@ async function logInOrder(fnList) {
 ```
 
 虽然`map`方法的参数是`async`函数,但是它是并发执行的,因为只有`async`函数内部是继发执行,外部不受影响,后面的`for...of`循环内部使用了`await`,因此实现了按顺序输出.
+
+
+
+### 17.7 异步遍历器
+
+Iterator接口是一种数据遍历的协议,只要调用遍历器对象的`next`方法,就会得到一个对象,表示当遍历指针所在的那个位置的信息.
+
+```js
+{value:"222",done:false};
+```
+
+`next`方法返回的对象结构是`{value,done}`,其中`value`表示当前的数据的值,`done`是一个布尔值,表示遍历是否结束.
+
+这里有一个规定,`next`方法必须是同步的,只要调用就必须立刻返回值,也就是说,一旦执行`next`方法,就必须同步地得到`value`和`done`这两个属性,如果遍历指针正好指向同步操作,这没有任何问题.
+
+但对于异步操作,就不太合适了.目前的解决方法是,Generator函数里面的异步操作,返回一个Thunk函数或者Promise对象,而`done`属性则还是同步产生的.
+
+目前，有一个[提案](https://github.com/tc39/proposal-async-iteration)，为异步操作提供原生的遍历器接口，即`value`和`done`这两个属性都是异步产生，这称为”异步遍历器“（Async Iterator）。
+
+
+
+#### 异步遍历的接口
+
+异步遍历器的最大的语法特点,就是调用遍历器的`next`方法,返回的是一个Promise对象.
+
+```js
+asyncIterator.next().then(({ value, done }) => {
+  /*...*/
+});
+```
+
+`asyncIterator`是一个异步遍历器,调用`next`方法以后,返回一个Promise对象.因此,可以使用`then`方法指定,这个Promise对象的状态变为`resolve`以后的回调函数,回调函数的参数,则是一个具有`value`和`done`两个属性的对象,这个跟同步遍历器是一样的.
+
+一个对象的同步遍历器的接口,部署在`Symbol.iterator`属性上面.同样地,对象的异步遍历器接口,部署在`Symbol.asyncIterator`属性上面,不管是什么样的对象,只要它的`Symbol.asnycIterator`属性有值,就表示应该对它进行异步遍历。
+
+异步遍历demo:
+
+```js
+const asyncIterable = createAsyncIterable(['a', 'b']);
+const asyncIterator = asyncIterable[Symbol.asyncIterator]();
+
+asyncIterator
+  .next()
+  .then(iterResult1 => {
+    console.log(iterResult1); // { value: 'a', done: false }
+    return asyncIterator.next();
+  })
+  .then(iterResult2 => {
+    console.log(iterResult2); // { value: 'b', done: false }
+  })
+  .then(iterResult3 => {
+    console.log(iterResult3); //// { value: undefined, done: true }
+  });
+```
+
+异步遍历器其实返回了两次值,第一次调用的时候,返回一个Promise对象;等到Promise对象`resolve`了,再返回一个当前数据成员信息的对象,这就是说,异步遍历器与同步遍历器的行为一样,可是它返回的是一个`Promise`对象,作为中介,用于存储异步的数据.
+
+由于异步遍历器的`next`方法,返回的是一个`Promise`对象,因此可以把它放在`await`命令后面
+
+```js
+async function f() {
+  const asyncIterable = createAsyncIterable(['a', 'b']);
+  const asyncIterator = asyncIterable[Symbol.asyncIterator]();
+  // { value:'a',done:false }
+  console.log(await asyncIterator.next());
+  // { value:'b',done:false }
+  console.log(await asyncIterator.next());
+  // { value:undefined,done:true }
+}
+```
+
+`next`方法用`await`处理以后,就不必使用`then`方法了,整个流程看起来就很接近于同步操作处理了.
+
+:warning: 异步遍历器的`next`方法是可以连续调用的,不必等到上一步产生Promise对象`resolve`以后再调用.这种情况下,`next`方法会累积起来,自动按照每一步的顺序运行下去。
+
+把所有的`next`方法放在`Promise.all`方法里面
+
+```js
+const asyncGenObj = createAsyncIterable(['a','b']);
+const [{value:v1},{value:v2}] = await Promise.all([
+  asyncGenObj.next(),asyncGenObj.next()
+])
+console.log(v1, v2); // a b
+```
+
+另一种用法是一次性调用所有的`next`方法,然后`await`最后一步操作.
+
+```js
+const write = openFile('someFile.txt');
+writer.next('hello');
+writer.next('world');
+await writer.return();
+```
+
+
+
+#### for await...for
+
+`for...of`循环用于遍历同步的Iterator接口.新引入`for await...of`,则是用于遍历异步的Iterator接口。
+
+```js
+async function f() {
+  for await (const x of createAsyncIterable(['a', 'b'])) {
+    console.log(x);
+  }
+}
+// a
+// b
+```
+
+`creatAsyncIterable()`返回一个异步遍历器,`for...of`循环自动调用这个遍历器的`next`方法,会得到一个Promise对象.`await`用来处理这个`Promise`对象,一旦`resolve`,就把得到的值(`x`)传入`for...of`的循环体.
+
+`for await...of`循环的一个用途,是部署了asyncIterable操作的异步接口,可以直接放入这个循环。
+
+```js
+let body = '';
+async function f() {
+  for await (const data of req) body += data;
+  const parsed = JSON.parse(body);
+  console.log('got', parsed);
+}
+```
+
+上面代码中,`req`是一个asyncIterable对象,用来异步读取数据,可以看到,使用`for await...of`循环以后,代码会非常简洁.
+
+如果`next`方法返回的Promise对象被`reject`,`for await...of`就会报错,要用`try...catch`捕捉.
+
+```js
+async function () {
+  try{
+    for await (const x of createRejectingIterable()){
+      console.log(x);
+    }
+  } catch(e){
+    console.error(e);
+  }
+}
+```
+
+`for await...of`循环也可以用于同步遍历器
+
+```js
+(async function () {
+  for await (const x of ['a', 'b']) {
+    console.log(x);
+  }
+})();
+// a
+// b
+```
+
+
+
+#### 异步Generator函数
+
+Generator函数返回一个同步遍历器对象,而异步Generator函数的作用,是返回一个异步遍历器对象.
+
+在语法上,异步Generator函数就是`async`函数与Generator函数的结合.
+
+```js
+async function* gen() {
+  yield 'hello';
+}
+const genObj = gen();
+genObj.next().then(x => console.log(x));
+// {value:'hello',done:false}
+```
+
+`gen`是一个异步Generator 函数,执行后返回一个异步Iterator对象,对该对象调用`next`方法,返回一个Promise对象
+
+异步遍历器的设计目的之一,就是Generator函数处理同步操作和异步操作时,能够使用同一套接口
+
+```js
+// 同步 Generator 函数
+function* map(iterable, func) {
+  const iter = iterables[Symbol.iterator]();
+  while (true) {
+    const { value, done } = iter.next();
+    if (done) break;
+    yield func(value);
+  }
+}
+
+// 异步 Generator函数
+async function* map(iterable, func) {
+  const iter = iterables[Symbol.iterator]();
+  while (true) {
+    const { value, done } = await iter.next();
+    if (done) break;
+    yield func(value);
+  }
+}
+```
+
+有了异步遍历器以后,同步Generator函数和异步Generator函数的写法基本上是一致的.
+
+other demo:
+
+```js
+async function* readLine(params) {
+  let file = await fileOpen(path);
+
+  try {
+    while (!file.EOF) {
+      yield await file.readLine();
+    }
+  } finally {
+    await file.close();
+  }
+}
+```
+
+异步操作前面使用`await`关键字标明,即`await`后面的操作,应该返回Promise对象.凡是使用`yield`关键字的地方,就是`next`方法的停下来的地方,它后面的表达式的值(`await file.readLine()`)会作为`next()`的`value`,这一点与同步 Generator函数一致的.
+
+异步Generator函数内部,能够同时使用`await`和`yield`命令.`await`命令用于将外部操作产生的值输入函数内部, `yield`命令用于将函数内部的值输出
+
+上面代码定义的异步 Generator 函数的用法如下。
+
+```js
+(async function() {
+  for await (const line of readLine(filePath)) {
+    console.log(line);
+  }
+});
+```
+
+异步 Generator 函数可以与`for await...of`循环结合起来使用。
+
+```js
+async function* prefixLines(asyncIterable) {
+  for await (const line of asyncIterable) {
+    yield '>' + line;
+  }
+}
+```
+
+异步Generator函数的返回值是一个异步Iterator,即每次调用它的`next`方法,会返回一个Promise对象,也就是说 跟在`yield`命令后面的,应该是一个Promise对象。
+
+```js
+async function* asyncGenerator() {
+  console.log('Start');
+  const result = await doSomethingAsync(); // (A)
+  yield 'Result :' + result;// (B)
+  console.log('Done');
+}
+
+const ag = asyncGenerator();
+ag.next().then(({value,done})=>{
+  //...
+})
+```
+
+上面代码中,`ag`是`asyncGenerator`函数返回的异步`Iterator`对象,调用`ag.next()`以后,`asyncGenerator`函数内部执行顺序如下
+
+1. 打印出`start`
+2. `const await`等于`await`返回的`Promise`对象,程序不会停在这里,会继续执行.
+3. 程序会在`B`处暂停执行,`yield`命令立刻返回一个Promise对象,该对象就是`ag.next()`的返回值,
+4. `A`处`await`命令后面的那个Promise对象,产生的值放入`result`变量.
+5. `B`处的Promise对象resolved,`then`方法指定的回调函数开始执行,该函数的参数是一个对象,`value`的值是表达式`Result:+result`的值,done属性的值为`false`
