--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -3252,7 +3252,9 @@ async function* prefixLines(asyncIterable) {
 ```js
 async function* asyncGenerator() {
   console.log('Start');
+  //将外部的值传入内部
   const result = await doSomethingAsync(); // (A)
+  //将内部函数的运算结果输出
   yield 'Result :' + result;// (B)
   console.log('Done');
 }
@@ -3270,3 +3272,134 @@ ag.next().then(({value,done})=>{
 3. 程序会在`B`处暂停执行,`yield`命令立刻返回一个Promise对象,该对象就是`ag.next()`的返回值,
 4. `A`处`await`命令后面的那个Promise对象,产生的值放入`result`变量.
 5. `B`处的Promise对象resolved,`then`方法指定的回调函数开始执行,该函数的参数是一个对象,`value`的值是表达式`Result:+result`的值,done属性的值为`false`
+
+
+
+A和B两行的作用类似于下面的代码
+
+```js
+return new Promise((resolve, reject) => {
+  doSomethingAsync().then(result => {
+    resolve({
+      value: 'Result:' + result,
+      done: false
+    });
+  });
+});
+```
+
+返回一个带有异步Promise的Promise对象,当这个对象的内部的异步Promise`resolve`后,就会将值传回给外部的Promise(将外层的`resolve`)
+
+
+
+如果异步Generator函数抛出错误,会被Promise对象`reject`,然后抛出的错误被`catch`方法捕获.
+
+```js
+async function* asyncGenerator() {
+  throw new Error('Warning!');
+}
+asyncGenerator()
+  .next()
+  .catch(err => console.log(err));// Error: Problem!
+```
+
+
+
+:warning: 普通的async函数返回的是**一个Promise对象**,而异步Generator函数返回的是一个**异步Iterator对象**.
+
+async函数和异步Generator函数,是封装异步操作的两种方法,都用来达到同一种目的,区别在于,`async`自带执行器,而`异步Generator`需要通过`for await...of`执行,或者需要自己编写执行器.
+
+> Generator函数的执行器
+
+```js
+async function takeAsync(asyncIterable, count = Infinity) {
+  const result = [];
+  const iterator = asyncIterable[Symbol.asyncIterator]();
+  while (result.length < count) {
+    const { value, done } = await iterator.next();
+    //  当done:true的时候,表示Iterator已经执行完了,没有下一步了,则break掉循环
+    if (done) break; 
+    result.push(value);
+  }
+}
+```
+
+异步 Generator 函数产生的异步遍历器，会通过`while`循环自动执行，每当`await iterator.next()`完成，就会进入下一轮循环。一旦`done`属性变为`true`，就会跳出循环，异步遍历器执行结束。
+
+使用实例:
+
+```js
+async function f() {
+  async function* gen() {
+    yield 'a';
+    yield 'b';
+    yield 'c';
+  }
+
+  return takeAsync(gen());
+}
+
+f().then(result => {
+  console.log(result); // ['a','b','c'];
+});
+```
+
+异步Generator函数出现以后,JavaScript就有了四种函数形式:普通函数,async函数,Generator函数和异步Generator函数.
+
+如果是一系列按照顺序执行的异步操作(读取文件,然后写入新内容,保存到硬盘中),可以使用async函数
+
+如果是一系列产生相同数据结构的异步操作(比如一行一行读取文件),可以使用异步Generator函数
+
+异步Generator函数也可以通过`next`方法的参数,接收外部传入的数据.
+
+```js
+const writer = openFile('someFile.txt');
+writer.next('hello');  //立即执行
+writer.next('world');  //立即执行
+await writer.return(); //等待写入结束
+```
+
+`openFile`是一个异步Generator函数。`next`方法的参数,向该函数内部的操作传入数据,每次`next`方法都是同步执行的，最后`await`命令用于等待整个写入操作结束.
+
+同步的数据结构,也可以使用异步Generator函数
+
+```js
+async function* createAsyncIterable(syncIterable) {
+  for (const elem of syncIterable) {
+    yield elem;
+  }
+}
+```
+
+由于没有异步操作,所以也没有使用`await`关键字
+
+
+
+#### yield* 语句
+
+`yield*` 语句也可以跟一个异步遍历器
+
+```js
+async function* gen1() {
+  yield 'a';
+  yield 'b';
+  return 2;
+}
+async function* gen2() {
+  //result 最终会为2
+  const result = yield* gen1();
+}
+```
+
+与同步Generator一样,`for awai...of`循环会展开`yield*`
+
+```js
+(async function() {
+  for await (const x of gen2()) {
+    console.log(x);
+  }
+})();
+// a
+// b
+```
+
