--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -3403,3 +3403,241 @@ async function* gen2() {
 // b
 ```
 
+
+
+
+
+## 18. Class的基本语法
+
+###18.1 简介
+
+JavaScript 语言中,生成实例对象的传统方法是通过构造函数:
+
+ ```js
+function Point(x, y) {
+  this.x = x;
+  this.y = y;
+}
+Point.prototype.toString = function() {
+  return '(' + this.x + ',' + this.y + ')';
+};
+var p = new Point(1, 2);
+ ```
+
+这种原型链的写法,与传统的面向对象写法(比如C++和JAVA)差异很大,很容易让人困惑.
+
+ES6提供了更接近传统语言的写法,引入了Class(类)这个概念,作为对象的模板,通过`class`关键字,可以定义类.
+
+基本上,ES6的`class`可以看作只是一个语法糖,它的绝大部分功能,ES5都可以做到,新的`class`写法只是让对象原型的写法更加清晰,更像面向对象变成的语法而已,上面的代码可以改写为:
+
+```js
+class Point {
+  constructor(x, y) {
+    this.x = x;
+    this.y = y;
+  }
+  toString() {
+    return '(' + this.x + ',' + this.y + ')';
+  }
+}
+```
+
+上面代码定义了一个"类",里面有一个`constructor`方法,这就是构造方法,而`this`,这就是构造方法,而`this`关键字则代表实例对象.就是其实ES6中的`constructor`构造方法就是ES5中的构造函数.
+
+`Point`类除了构造方法,还可以定义其他方法,其他的方法其实就是原型链上的属性方法
+
+```js
+class Point {
+  // ...
+}
+
+typeof Point // "function"
+Point === Point.prototype.constructor // true
+```
+
+使用的时候也是对类使用`new`命令,跟构造函数的用法完全一致.
+
+```js
+class Bar {
+  doStuff() {
+    console.log('stuff');
+  }
+}
+
+var b = new Bar();
+b.doStuff() // "stuff"
+```
+
+构造函数的`prototype`属性，在 ES6 的“类”上面继续存在。事实上，类的所有方法都定义在类的`prototype`属性上面。
+
+```js
+class Point {
+  constructor() {
+    // ...
+  }
+
+  toString() {
+    // ...
+  }
+
+  toValue() {
+    // ...
+  }
+}
+
+// 等同于
+
+Point.prototype = {
+  constructor() {},
+  toString() {},
+  toValue() {},
+};
+```
+
+在类的实例上面调用方法，其实就是调用原型上的方法。
+
+```js
+class B {}
+let b = new B();
+
+b.constructor === B.prototype.constructor // true
+```
+
+上面代码中,`b`是`B` 类的实例,它的`constructor`方法就是`B`类原型的`constructor`方法。
+
+
+
+由于类的方法都定义在`prototype`对象上面，所以类的新方法可以添加在`prototype`对象上面。`Object.assign`方法可以很方便地一次向类添加多个方法。
+
+```js
+class Point {
+  constructor() {
+    //some code;
+  }
+}
+
+Object.assign(Point.prototype, {
+  toString() {},
+  toValue() {}
+});
+```
+
+`prototype`对象的`constructor`属性，直接指向“类”的本身，这与 ES5 的行为是一致的。
+
+```js
+Point.prototype.constructor === Point // true
+```
+
+另外，类的内部所有定义的方法，都是不可枚举的（non-enumerable）。
+
+```js
+class Point {
+  constructor(x, y) {
+    // ...
+  }
+
+  toString() {
+    // ...
+  }
+}
+
+Object.keys(Point.prototype)
+// []
+Object.getOwnPropertyNames(Point.prototype)
+// ["constructor","toString"]
+```
+
+上面代码中，`toString`方法是`Point`类内部定义的方法，它是不可枚举的。这一点与 ES5 的行为不一致。
+
+```js
+var Point = function (x, y) {
+  // ...
+};
+
+Point.prototype.toString = function() {
+  // ...
+};
+
+Object.keys(Point.prototype)
+// ["toString"]
+Object.getOwnPropertyNames(Point.prototype)
+// ["constructor","toString"]
+```
+
+上面代码采用 ES5 的写法，`toString`方法就是可枚举的。
+
+类的属性名，可以采用表达式。
+
+```js
+let methodName = 'getArea';
+
+class Square {
+  constructor(length) {
+    // ...
+  }
+
+  [methodName]() {
+    // ...
+  }
+```
+
+上面代码中，`Square`类的方法名`getArea`，是从表达式得到的。
+
+ps:感觉这块越来越绕了,其实就是语法糖,类的`constructor`就是对应构造函数,其他的属性方法就是原型的属性方法,但是也有不同点,类的内部定义的方法,都是不可枚举的,而ES5原型链的写法,是可枚举的
+
+
+
+### 18.2 严格模式
+
+类和模块的内部,默认是严格模式,所以不需要使用`use strict`指定运行模式.
+
+考虑到未来所有的代码,其实都是运行在模块之中,所以ES6实际上把整个语言升级到了严格模式
+
+
+
+### 18.3 constructor 方法
+
+`constructor`方法是类的默认方法,通过`new`命令生成对象实例时,自动调用该方法。
+
+一个类必须有`constructor`方法,如果没有显示定义,一个空的`constructor`方法会被默认添加.
+
+```js
+class Point {
+}
+
+// 等同于
+class Point {
+  constructor() {}
+}
+```
+
+上面代码中，定义了一个空的类`Point`，JavaScript 引擎会自动为它添加一个空的`constructor`方法。
+
+`constructor`方法默认返回实例对象（即`return this`），完全可以指定返回另外一个对象
+
+```js
+class Foo {
+  constructor() {
+    return Object.create(null);
+  }
+}
+
+new Foo() instanceof Foo
+// false
+```
+
+上方代码,`construcotr`函数返回一个全新的对象,结果导致实例对象不是`FOO`类的实例。
+
+类必须使用`new`调用，否则会报错。这是它跟普通构造函数的一个主要区别，后者不用`new`也可以执行。
+
+```js
+class Foo {
+  constructor() {
+    return Object.create(null);
+  }
+}
+
+Foo()
+// TypeError: Class constructor Foo cannot be invoked without 'new'
+```
+
