尝试eventBus &&更新了依赖收集的笔记

--- a/vue/原理/依赖收集.md
+++ b/vue/原理/依赖收集.md
@@ -25,7 +25,7 @@ new Vue({
 
 
 
-### 依赖收集类Dep
+### 依赖收集类Dep(发布者)
 
 当对data上的对象进行修改值的时候,就会触发它的setter,那么取值的时候自然就会触发getter事件,所以我们在一开始的时候进行一次render,那么所有被渲染所依赖的data中的数据就会被getter收集到Dep的subs中去,在对data中的数据进行修改的时候setter只会触发Dep的subs的函数
 
@@ -129,4 +129,8 @@ Dep.target = null;
 1. 创建observer,把数据变成可观察的
 2. 创建一个`Watcher`对象,并将它赋值给全局的`Dep.target`
 3. render,触发了实际模板上的data的getter(就是有用到的数据),这时`watcher`对象被push到了dep当中 ,随后销毁Dep.target,避免之后触发getter的时候会重复添加依赖
-4.  当setter触发的时候,就会调用刚刚dep数组当中的notify,进而触发`watcher`的update,触发相应视图
+4. 当setter触发的时候,就会调用刚刚dep数组当中的notify,进而触发`watcher`的update,触发相应视图
+
+![https://camo.githubusercontent.com/3845b9554e62650727fa7cae8f1c169060b879f7/68747470733a2f2f636e2e7675656a732e6f72672f696d616765732f646174612e706e67](https://camo.githubusercontent.com/3845b9554e62650727fa7cae8f1c169060b879f7/68747470733a2f2f636e2e7675656a732e6f72672f696d616765732f646174612e706e67)
+
+通过data的**getter**将data收集为依赖(Dep),通过data的setter触发依赖(Dep)-->依赖(Dep)中的Wathcer触发update-->re-render
