修改流程说明

--- a/vue/原理/依赖收集.md
+++ b/vue/原理/依赖收集.md
@@ -126,11 +126,10 @@ Dep.target = null;
 
 所以具体的流程应该是:
 
-1. 创建observer,把数据变成可观察的
-2. 创建一个`Watcher`对象,并将它赋值给全局的`Dep.target`
-3. render,触发了实际模板上的data的getter(就是有用到的数据),这时`watcher`对象被push到了dep当中 ,随后销毁Dep.target,避免之后触发getter的时候会重复添加依赖
-4. 当setter触发的时候,就会调用刚刚dep数组当中的notify,进而触发`watcher`的update,触发相应视图
-
+1. 创建observer,把数据变成可观察的(修改getter)
+2. 取值时,就会将全局的Watcher,addSub到该属性的依赖(Dep)当中
+3. 改值时,setter就会触发该属性Dep的notify的函数(触发所有Watcher的更新)
+4. Watcher触发updata,通知更新视图(re-render)
 ![https://camo.githubusercontent.com/3845b9554e62650727fa7cae8f1c169060b879f7/68747470733a2f2f636e2e7675656a732e6f72672f696d616765732f646174612e706e67](https://camo.githubusercontent.com/3845b9554e62650727fa7cae8f1c169060b879f7/68747470733a2f2f636e2e7675656a732e6f72672f696d616765732f646174612e706e67)
 
-通过data的**getter**将data收集为依赖(Dep),通过data的setter触发依赖(Dep)-->依赖(Dep)中的Wathcer触发update-->re-render
+通过data的**getter**将data添加到依赖(Dep),通过data的setter触发依赖(Dep)-->依赖(Dep)中的Wathcer触发update-->re-render
